<resources>
    <string name="app_name">Football Match</string>
    <string name="action_settings">Settings</string>
    <string name="club_name">Football Club Name</string>

    <string-array name="club_name">
        <item>AC Milan FC</item>
        <item>Arsenal FC</item>
        <item>Barcelona FC</item>
        <item>Bayern Munchen FC</item>
        <item>Chelsea FC</item>
        <item>Manchester City FC</item>
        <item>Real Madrid FC</item>
        <item>Manchester United FC</item>
    </string-array>

    <string-array name="club_description">
        <item>AC Milan FC adalah tim yang memiliki pemain-pemain kuat</item>
        <item>Arsenal FC adalah tim yang dijuluki sang pemenang</item>
        <item>Barcelona FC adalah tim yang berasal dari panyol yang mendedikasikan diri pada juara </item>
        <item>Bayern Munchen FC adalah tim yang berasal dari Inggris yang menjuarai banyak liga</item>
        <item>Chelsea FC adalah tim yang memiliki kekuatan tempur tinggi</item>
        <item>Manchester City FC adalah tim yang banyak menuai kontoersi</item>
        <item>Real Madrid FC adalah tim Spanyol yang dulunya diisi Ronaldo </item>
        <item>Manchester United FC adalah tim yang dijuluki setan merah</item>
    </string-array>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="description_hint">description</string>
    <string name="title_activity_match_schedule">Football Match</string>
    <string name="next_match">Next Match</string>
    <string name="previous_match">Previous Match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score_hint">5</string>
    <string name="away_score">0</string>
    <string name="date_hint">date</string>
    <string name="title_activity_detail_match">DetailMatchActivity</string>
    <string name="goals">Goals</string>
    <string name="shots">Total Shots</string>
    <string name="warning">Warning</string>
    <string name="favorite_match">Favorites</string>
    <string name="no_matches_saved">NO MATCHES or TEAM SAVED</string>
    <string name="fav_match_title">Favorite Match</string>
    <string name="prev_match">Previous Match</string>
    <string name="tab_match">Match</string>
    <string name="tab_teams">Teams</string>
    <string name="team_name_hint">Teams Name</string>
    <string name="choose_league">Choose League</string>
    <string name="title_activity_team_detail">TeamDetailActivity</string>
    <string name="barcelona">Barcelona</string>
    <string name="year_hint">1899</string>
    <string name="camp_nou">Camp Nou</string>
    <string name="player_hint">Lionel Messi</string>
    <string name="position_player">Forward</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="height_hint">Height (m)</string>
    <string name="text_weight_sample">65</string>
    <string name="search_hint">Search</string>
    <string name="find_team">Cari Team Favorite mu</string>
    <string name="title_activity_result">Result Match</string>
    <string name="find_match">Cari Match</string>
    <string name="_19_00">19:00</string>
    <string name="finding_match">Find Your Matches</string>
</resources>
